syntax = "proto3";

package job;

option go_package = "github.com/jeanmolossi/literate-robot/src/job";

service JobService {
    rpc GetJob(GetJobRequest) returns (Job) {};
}

message GetJobRequest {
    int32 id = 1;
}

message Job {
    int32 job_id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    int32 user_id = 5;
    int32 city_id = 6;
    int32 state_id = 7;
}